# ClusterCompressionStudy

./: 0001-add-compression-study.patch  0001-cluster-binary-dump.patch  CMakeLists.txt  README.md  plot.py
bench/: main.cpp
include/: Cluster.h  ClusterIO.h  Compressor.h  Helpers.h
src/: Cluster.cpp  ClusterIO.cpp  Compressor.cpp
